--- a/resources/assets/sass/story/_story.scss
+++ b/resources/assets/sass/story/_story.scss
@@ -42,7 +42,7 @@
         color:#026287;
         font-size: em(34);
         line-height: 40px; 
-        margin-top:em(10);
+        margin-top:em(7);
         font-weight:$black-weight;
     
          @include breakpoint($phone) {
